# Qora

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Qora  README.md  docker-compose.n8n-local.yml  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml  pytest.ini  qora_cli.py
backend/alembic/: env.py
backend/app/: analysis_schema.py  config.py  main.py  memory.py  summarizer.py  sweeper.py
backend/scripts/: check-secrets.py  inspect_phase2.sh  migrate.py  migrate_abandonment_to_outcome.py  migrate_add_agent_id_fks.py  migrate_add_agents.py  migrate_analysis_language.py  migrate_analysis_v2.py  migrate_bi_columns.py  migrate_call_scheduler.py  migrate_data_corrections.py  migrate_drop_engagement_quality.py  migrate_extraction_v2.py  migrate_lead_id_nullable.py  migrate_next_action_engine.py  migrate_phase2.py  migrate_session_reconciliation.py  seed_analysis_demo_call.py  smoke_test_analysis.py
backend/test_outputs/: smoke_test_capture_20260506_163421.json  smoke_test_capture_20260506_172903.json  smoke_test_facts_20260506_163421.json  smoke_test_facts_20260506_172903.json  smoke_test_report_20260506_163421.md  smoke_test_report_20260506_172903.md
backend/tests/: conftest.py  test_analytics_router.py  test_analytics_service.py  test_auth.py  test_context_binding.py  test_correlation.py  test_crm_import_external_lead_id.py  test_data_corrections.py  test_dimension_rollups.py  test_errors.py  test_health.py  test_health_detail.py  test_index_payload.py  test_lead_model.py  test_logging.py  test_next_action_engine.py  (+10 more)
(+744 files in other folders)
